# bharatsecure

./: .gitignore  Makefile  README.md  main.py  requirements.txt
config/: system_config.yaml
cpp/: CMakeLists.txt  camera_optimizer.cpp  camera_optimizer.h
docker/: Dockerfile.jetson
jetson/: jetson_config.yaml  optimize_jetson.py  setup_jetson.sh
scripts/: collect_data.py  evaluate_model.py  train_model.py
src/ai/: gesture_classifier.py  model_trainer.py
src/ai/models/: mlp_model.py
src/dashboard/: app.py
src/dashboard/templates/: index.html
src/features/: feature_extractor.py  temporal_smoother.py
src/federated/: differential_privacy.py  federated_client.py  federated_server.py
src/media_control/: media_controller.py
src/security/: anomaly_detector.py  liveness_detector.py  model_integrity.py  zero_trust.py
src/utils/: crypto.py  logger.py
src/vision/: __init__.py  camera_capture.py  landmark_detector.py
tests/: test_gesture.py  test_security.py
